--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ jobs:
   build:
     machine:
       image: windows-server-2019-vs2019:stable
+    resource_class: windows.medium
+    shell: powershell.exe -ExecutionPolicy Bypass
     parallelism: 4
     steps:
       - run: echo "Windows"
